<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#060C30"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:id="@+id/Linearly1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start|top"
            android:orientation="vertical"
            android:paddingLeft="20sp"
            android:paddingTop="40sp"
            android:paddingRight="20sp">


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20sp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/choose_what_to_allow_app_to_access"
                android:textAlignment="viewStart"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <LinearLayout
                android:id="@+id/Linearly2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_save" />

                <LinearLayout
                    android:id="@+id/Linearly3"
                    android:layout_width="185dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="79dp"
                        android:layout_height="wrap_content"
                        android:text="@string/storage"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Access photos media and "
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text=" files on your device"
                        android:textColor="#FFFFFF"
                        android:textSize="14sp" />

                </LinearLayout>

                <Switch
                    android:id="@+id/swStorage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHighlight="#650101"
                    android:textColorLink="#650101" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearly4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="1dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_dialog_map" />

                <LinearLayout
                    android:id="@+id/Linearly5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Access this device's location"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <Switch
                    android:id="@+id/swLocation"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHighlight="#650101"
                    android:textColorLink="#650101" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearly6"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="95dp"
                    android:layout_height="wrap_content"
                    app:srcCompat="@android:drawable/ic_menu_camera" />

                <LinearLayout
                    android:id="@+id/Linearly7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/camara"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Take pictures and record videos"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <Switch
                    android:id="@+id/swCamera"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHighlight="#650101"
                    android:textColorLink="#650101" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearly8"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="61dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/stat_sys_phone_call" />

                <LinearLayout
                    android:id="@+id/Linearly9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/phone"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Make and manage phone calls"
                        android:textColor="#FFFFFF" />

                </LinearLayout>

                <Switch
                    android:id="@+id/swPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHighlight="#650101"
                    android:textColorLink="#650101" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearly10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10sp"
                android:layout_marginBottom="5sp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="81dp"
                    android:layout_height="43dp"
                    android:layout_weight="1"
                    app:srcCompat="@android:drawable/ic_menu_my_calendar" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/contacts"
                        android:textColor="#FFFFFF"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Access your contacts"
                        android:textColor="#FFFFFF" />
                </LinearLayout>

                <Switch
                    android:id="@+id/swContacts"
                    android:layout_width="124dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHighlight="#650101"
                    android:textColorLink="#650101" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearly11"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30sp"
                android:layout_marginEnd="16dp"
                android:gravity="bottom|right"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="5sp"
                    android:layout_height="29dp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:background="#650101"
                    android:backgroundTint="#650101"
                    android:text="Cancel"
                    android:textColor="#DEFFD5"
                    android:textColorHighlight="#FFFFFF"
                    android:textColorLink="#650101"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btnContinue"
                    android:layout_width="5dp"
                    android:layout_height="29dp"
                    android:layout_marginLeft="10sp"
                    android:layout_marginRight="10sp"
                    android:layout_weight="1"
                    android:background="#650101"
                    android:backgroundTint="#650101"
                    android:text="Continue"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="#650101"
                    android:textColorLink="#650101"
                    android:textSize="10sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/Linearly12"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical" />

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>